change tactic: update contacts in ringcentral instead

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,13 +9,16 @@
   "permissions": [
     "declarativeNetRequest",
     "cookies",
-    "storage"
+    "storage",
+    "tabs",
+    "notifications"
   ],
   "content_scripts": [
     {
       "matches": [
         "http://localhost:*/*",
-        "*://*.flosspass.com/*"
+        "*://*.flosspass.com/*",
+        "*://*.curvehero.com/*"
       ],
       "js": ["content.js"]
     }
