Fix: Enabled and disable ringcentral extension from popup

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,8 @@
   "permissions": [
     "declarativeNetRequest",
     "cookies",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "content_scripts": [
     {
